# grpc-calculator

./: Cargo.toml
proto/: calculator.proto
shells/default/: default.nix
src/: client.rs  server.rs
